--- a/MVCLayer/Views/Shared/_Layout.cshtml
+++ b/MVCLayer/Views/Shared/_Layout.cshtml
@@ -1,10 +1,11 @@
-﻿<!DOCTYPE html>
+﻿﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Home</title>
-    
+
     <link rel="stylesheet" href="~/css/root.css" asp-append-version="true" />
     <link href="~/css/shared.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/MVCLayer.styles.css" asp-append-version="true" />
@@ -739,56 +740,56 @@
     </div>
 
     <footer>
-      <div class="container main-footer">
-        <div class="footer-side-item">
-          <h2>Информация</h2>
-          <ul>
-            <li>
-              <a href="#">О компании</a>
-            </li>
-            <li>
-              <a href="#">Контактная информация</a>
-            </li>
-            <li>
-              <a href="#">Наши магазины</a>
-            </li>
-          </ul>
+        <div class="container main-footer">
+            <div class="footer-side-item">
+                <h2>Информация</h2>
+                <ul>
+                    <li>
+                        <a href="#">О компании</a>
+                    </li>
+                    <li>
+                        <a href="#">Контактная информация</a>
+                    </li>
+                    <li>
+                        <a href="#">Наши магазины</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-side-item">
+                <h2>Поддержка</h2>
+                <a href="#">Сервисные центры</a>
+            </div>
+            <div class="footer-side-item">
+                <h2>Покупателям</h2>
+                <a href="#">Акции</a>
+            </div>
+            <div class="footer-side-item">
+                <h2>Мы принимаем к оплате</h2>
+                <ul>
+                    <li>
+                        <a href="#">Наличные</a>
+                    </li>
+                    <li>
+                        <a href="#">PayMe</a>
+                    </li>
+                    <li>
+                        <a href="#">Click</a>
+                    </li>
+                    <li>
+                        <a href="#">UzCard</a>
+                    </li>
+                    <li>
+                        <a href="#">Apelsin</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-side-item">
+                <h2>Мы в социальных сетях</h2>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-telegram"></i></a>
+                <a href=""><i class="fa-brands fa-youtube"></i></a>
+            </div>
         </div>
-        <div class="footer-side-item">
-          <h2>Поддержка</h2>
-          <a href="#">Сервисные центры</a>
-        </div>
-        <div class="footer-side-item">
-          <h2>Покупателям</h2>
-          <a href="#">Акции</a>
-        </div>
-        <div class="footer-side-item">
-          <h2>Мы принимаем к оплате</h2>
-          <ul>
-            <li>
-              <a href="#">Наличные</a>
-            </li>
-            <li>
-              <a href="#">PayMe</a>
-            </li>
-            <li>
-              <a href="#">Click</a>
-            </li>
-            <li>
-              <a href="#">UzCard</a>
-            </li>
-            <li>
-              <a href="#">Apelsin</a>
-            </li>
-          </ul>
-        </div>
-        <div class="footer-side-item">
-          <h2>Мы в социальных сетях</h2>
-          <a href=""><i class="fa-brands fa-instagram"></i></a>
-          <a href=""><i class="fa-brands fa-telegram"></i></a>
-          <a href=""><i class="fa-brands fa-youtube"></i></a>
-        </div>
-      </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
