--- a/MVCLayer/Views/Home/Index.cshtml
+++ b/MVCLayer/Views/Home/Index.cshtml
@@ -90,113 +90,113 @@
         <div class="container main-container-of-main">
             <div class="katalog">
                 <h2>Каталог</h2>
-                <a href="../Views/Home/Catalog/IgroviyeSborki.cshtml">
+                <a href="">
                     <img width="30" src="images/Category_images/Sborka.png" alt="" />
                     Игровые Сборки
                 </a>
-                <a href="../Views/Home/Catalog/Noutbuki.cshtml">
+                <a href="">
                     <img width="30"
                          src="~/images/Category_images/Laptops.png"
                          alt="Laptops" />
                     Ноутбуки
                 </a>
-                <a href="../Views/Home/Catalog/Klaviaturi.cshtml">
+                <a href="">
                     <img width="30"
                          src="images/Category_images/keyboards.png"
                          alt="keyboards" />
                     Клавиатуры
                 </a>
-                <a href="../Views/Home/Catalog/Mishki.cshtml">
+                <a href="">
                     <img width="30"
                          src="images/Category_images/Mouse.png"
                          alt="Mouse" />
 
                     Мышки
                 </a>
-                <a href="../Views/Home/Catalog/Naushniki.cshtml">
+                <a href="">
                     <img width="30"
                          src="images/Category_images/HeadPhones.png"
                          alt="Headphones" />
                     Наушники
                 </a>
-                <a href="../Views/Home/Catalog/Microfoni.cshtml">
+                <a href="">
                     <img width="30"
                          src="images/Category_images/MicroPhones.png"
                          alt="MicroPhones" />
                     Микрофоны
                 </a>
-                <a href="../Views/Home/Catalog/KovrikiDlyaMishi.cshtml">
+                <a href="l">
                     <img width="30"
                          src="images/Category_images/MousePads.jpg"
                          alt="MousePads" />
                     Коврики для мыши
                 </a>
-                <a href="../Views/Home/Catalog/Aksessuari.cshtml">
+                <a href="">
                     <img width="30"
                          src="images/Category_images/accosories.png"
                          alt="accosories" />
 
                     Аксессуары
                 </a>
-                <a href="../Views/Home/Catalog/Dekor.cshtml">
+                <a href="">
                     <img width="30"
                          src="images/Category_images/Decors.png"
                          alt="Decors" />
                     Декор
                 </a>
-                <a href="../Views/Home/Catalog/Komplekti.cshtml">
+                <a href="">
                     <img width="30" src="images/Category_images/Kits.png" alt="Kits" />
                     Комплекты
                 </a>
-                <a href="../Views/Home/Catalog/Monitori.cshtml">
+                <a href="">
                     <img width="30"
                          src="images/Category_images/Monitors.png"
                          alt="Monitors" />
                     Мониторы
                 </a>
-                <a href="../Views/Home/Catalog/Nakopiteli.cshtml">
-                    <img width="30" src="images/Category_images/SSd.png" alt="SSd" />
+                <a href="">
+                    <img width="30" src="images/Category_images/SSd.png" alt="SSD" />
                     Накопители
                 </a>
-                <a href="../Views/Home/Catalog/RAM.cshtml">
+                <a href="">
                     <img width="30" src="images/Category_images/RAM.png" alt="RAM" />
                     ОЗУ
                 </a>
-                <a href="../Views/Home/Catalog/UPS.cshtml">
+                <a href="">
                     <img width="30" src="images/Category_images/UPS.png" alt="UPS" />
                     UPS
                 </a>
-                <a href="../Views/Home/Catalog/BlokiPitaniya.cshtml">
+                <a href="">
                     <img width="30"
                          src="images/Category_images/PowerSupplies.png"
                          alt="PowerSupplies" />
                     Блоки питания
                 </a>
-                <a href="../Views/Home/Catalog/Kolonki.cshtml">
+                <a href="">
                     <img width="30"
                          src="images/Category_images/Columns.png"
                          alt="Columns" />
                     Колонки
                 </a>
-                <a href="../Views/Home/Catalog/WebCameri.cshtml">
+                <a href="">
                     <img width="30"
                          src="images/Category_images/WebCams.png"
                          alt="WebCams" />
                     Веб-Камеры
                 </a>
-                <a href="../Views/Home/Catalog/AppleProducts.cshtml">
+                <a href="">
                     <img width="30"
                          src="images/Category_images/AppleProducts.png"
                          alt="AppleProducts" />
                     Продукция Apple
                 </a>
-                <a href="../Views/Home/Catalog/IgroviyeConsoli.cshtml">
+                <a href="">
                     <img width="30"
                          src="images/Category_images/GameConsoles.png"
                          alt="GameConsoles" />
                     Игровые консоли
                 </a>
-                <a href="../Views/Home/Catalog/IgroviyeGeympadi.cshtml">
+                <a href="">
                     <img width="30"
                          src="images/Category_images/GamePads.png"
                          alt="GamePads" />
