--- a/MVCLayer/Views/Home/Index.cshtml
+++ b/MVCLayer/Views/Home/Index.cshtml
@@ -48,7 +48,6 @@
         </div>
         <!-- /* Site Upper side end */ -->
     </header>
-    <!-- Site Main header start -->
     <div class="container main-header">
         <div class="site-logo">
             <img width="315"
@@ -90,153 +89,153 @@
         <div class="container main-container-of-main">
             <div class="katalog">
                 <h2>Каталог</h2>
-                <a href="">
+                <a asp-controller="Home" asp-action="Sborka" asp-area="">
                     <img width="30" src="images/Category_images/Sborka.png" alt="" />
                     Игровые Сборки
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Laptops" asp-area="">
                     <img width="30"
-                         src="~/images/Category_images/Laptops.png"
+                         src="images/Category_images/Laptops.png"
                          alt="Laptops" />
                     Ноутбуки
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Keyboards" asp-area="">
                     <img width="30"
                          src="images/Category_images/keyboards.png"
                          alt="keyboards" />
                     Клавиатуры
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Mouses" asp-area="">
                     <img width="30"
                          src="images/Category_images/Mouse.png"
                          alt="Mouse" />
 
                     Мышки
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Headphones" asp-area="">
                     <img width="30"
-                         src="images/Category_images/HeadPhones.png"
+                         src="~/images/Category_images/HeadPhones.png"
                          alt="Headphones" />
                     Наушники
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Microfones" asp-area="">
                     <img width="30"
                          src="images/Category_images/MicroPhones.png"
                          alt="MicroPhones" />
                     Микрофоны
                 </a>
-                <a href="l">
+                <a asp-controller="Home" asp-action="MousePads" asp-area="">
                     <img width="30"
                          src="images/Category_images/MousePads.jpg"
                          alt="MousePads" />
                     Коврики для мыши
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Acsessories" asp-area="">
                     <img width="30"
                          src="images/Category_images/accosories.png"
                          alt="accosories" />
 
                     Аксессуары
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Decor" asp-area="">
                     <img width="30"
                          src="images/Category_images/Decors.png"
                          alt="Decors" />
                     Декор
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Kits" asp-area="">
                     <img width="30" src="images/Category_images/Kits.png" alt="Kits" />
                     Комплекты
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Monitors" asp-area="">
                     <img width="30"
                          src="images/Category_images/Monitors.png"
                          alt="Monitors" />
                     Мониторы
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="SSDorHDD" asp-area="">
                     <img width="30" src="images/Category_images/SSd.png" alt="SSD" />
                     Накопители
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="RAM" asp-area="">
                     <img width="30" src="images/Category_images/RAM.png" alt="RAM" />
                     ОЗУ
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="UPS" asp-area="">
                     <img width="30" src="images/Category_images/UPS.png" alt="UPS" />
                     UPS
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="PowerSupplies" asp-area="">
                     <img width="30"
                          src="images/Category_images/PowerSupplies.png"
                          alt="PowerSupplies" />
                     Блоки питания
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Colons" asp-area="">
                     <img width="30"
                          src="images/Category_images/Columns.png"
                          alt="Columns" />
                     Колонки
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="WebCam" asp-area="">
                     <img width="30"
                          src="images/Category_images/WebCams.png"
                          alt="WebCams" />
                     Веб-Камеры
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="AppleProducts" asp-area="">
                     <img width="30"
                          src="images/Category_images/AppleProducts.png"
                          alt="AppleProducts" />
                     Продукция Apple
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="GamingConsoles" asp-area="">
                     <img width="30"
                          src="images/Category_images/GameConsoles.png"
                          alt="GameConsoles" />
                     Игровые консоли
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Gamepads" asp-area="">
                     <img width="30"
                          src="images/Category_images/GamePads.png"
                          alt="GamePads" />
                     Игровые геймпады
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Glasses" asp-area="">
                     <img width="30"
                          src="images/Category_images/Glass.png"
                          alt="Glass" />
                     Очки для геймеров
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="WiFiRouter" asp-area="">
                     <img width="30"
                          src="images/Category_images/wifi-routers.png"
                          alt="wifi-routers" />
                     Wi-Fi Роутеры
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Kronshteyns" asp-area="">
                     <img width="30"
                          src="images/Category_images/Brackets.png"
                          alt="Brackets" />
                     Кронштейны
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Coolers" asp-area="">
                     <img width="30"
                          src="images/Category_images/Cooler.png"
                          alt="Cooler" />
                     Кулера
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Cases" asp-area="">
                     <img width="30" src="images/Category_images/Case.png" alt="Case" />
                     Корпуса
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Armchairs" asp-area="">
                     <img width="30"
                          src="images/Category_images/ArmChairs.png"
                          alt="ArmChairs" />
                     Кресла
                 </a>
-                <a href="">
+                <a asp-controller="Home" asp-action="Tables" asp-area="">
                     <img width="30"
                          src="images/Category_images/GameTables.png"
                          alt="GameTables" />
