armchairs and add added

--- a/UPG.Admin/_Imports.razor
+++ b/UPG.Admin/_Imports.razor
@@ -10,6 +10,8 @@
 @using UPG.Admin.Layout
 @using MudBlazor
 @using UPG.Admin.Models.MonitorDTOs
+@using UPG.Admin.Models.ArmchairsDTOs;
 @using UPG.Admin.Common
 @using System.Text
 @using System.Text.Json
+@using Newtonsoft.Json
