--- a/UPG.Admin/Pages/MonitorPages/Monitors.razor
+++ b/UPG.Admin/Pages/MonitorPages/Monitors.razor
@@ -13,6 +13,7 @@
         <MudTh>Name</MudTh>
         <MudTh>Brand name</MudTh>
         <MudTh>Price</MudTh>
+        <MudTh>Action</MudTh>
     </HeaderContent>
     <RowTemplate>
         <MudTd DataLabel="id">@context.Id</MudTd>
