3 ta modellarni admin panelga qo'shildi

--- a/UPG.Admin/_Imports.razor
+++ b/UPG.Admin/_Imports.razor
@@ -11,6 +11,9 @@
 @using MudBlazor
 @using UPG.Admin.Models.MonitorDTOs
 @using UPG.Admin.Models.ArmchairsDTOs;
+@using UPG.Admin.Models.CoolerDTOs;
+@using UPG.Admin.Models.DrivesDTOs;
+@using UPG.Admin.Models.GamingBuildsDTOs;
 @using UPG.Admin.Common
 @using System.Text
 @using System.Text.Json
