--- a/UPG.Admin/Layout/NavMenu.razor
+++ b/UPG.Admin/Layout/NavMenu.razor
@@ -35,6 +35,30 @@
                 </div>
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="cooler">
+                <div class="f-link d-flex justify-content-start" style="align-items: center">
+                    <span class="icon"><i class="bi bi-cooler"></i></span>
+                    <span>Coolers</span>
+                </div>
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="drives">
+                <div class="f-link d-flex justify-content-start" style="align-items: center">
+                    <span class="icon"><i class="bi bi-drives"></i></span>
+                    <span>Drives</span>
+                </div>
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="gamingBuilds">
+                <div class="f-link d-flex justify-content-start" style="align-items: center">
+                    <span class="icon"><i class="bi bi-drives"></i></span>
+                    <span>GamingBuilds</span>
+                </div>
+            </NavLink>
+        </div>
     </nav>
 </div>
 
