--- a/UPG.Admin/Pages/MonitorPages/Monitors.razor
+++ b/UPG.Admin/Pages/MonitorPages/Monitors.razor
@@ -20,6 +20,10 @@
         <MudTd DataLabel="Brand name">@context.BrandName</MudTd>
         <MudTd DataLabel="Name">@context.Name</MudTd>
         <MudTd DataLabel="Price">@context.Price</MudTd>
+        <MudTd DataLabel="Action" style="display: flex; justify-content:center; gap: 10px">
+            <MudIconButton @onclick="() => OpenEditPage(context.Id)" Icon="@Icons.Material.Filled.Edit" Variant="Variant.Filled" Color="Color.Primary" Size="Size.Medium" />
+            <MudIconButton @onclick="() => Delete(context.Id)" Icon="@Icons.Material.Filled.Delete" Variant="Variant.Filled" Color="Color.Error" Size="Size.Medium" />
+        </MudTd>
     </RowTemplate>
     <PagerContent>
         <MudTablePager />
@@ -30,9 +34,11 @@
     @inject HttpClient httpClient
     private string searchString1 = "";
     private MonitorDto selectedItem1 = null;
-    @inject NavigationManager navigate;
+    @inject NavigationManager navigate
+    @inject IDialogService DialogService
+    @inject ISnackbar Snackbar
 
-    private IEnumerable<MonitorDto> Elements = new List<MonitorDto>();
+    private List<MonitorDto> Elements = new List<MonitorDto>();
 
     protected override async Task OnInitializedAsync()
     {
@@ -59,5 +65,41 @@
     private void AddPage()
     {
         navigate.NavigateTo("monitors/add");
+    }
+
+    private void OpenEditPage(int id)
+    {
+        navigate.NavigateTo($"monitors/edit/{id}");
+    }
+
+    private async void Delete(int id)
+    {
+        var parameters = new DialogParameters<YesNo>();
+        parameters.Add(x => x.ContentText, "Are you sure delete this?");
+        parameters.Add(x => x.ButtonText, "Yes");
+        parameters.Add(x => x.Color, Color.Error);
+
+        var options = new DialogOptions() { CloseButton = true, MaxWidth = MaxWidth.ExtraSmall };
+
+        var dialogResult = await DialogService.Show<YesNo>("Delete", parameters, options).Result!;
+        if (!dialogResult.Cancelled)
+        {
+            var response = await httpClient.DeleteAsync(Helper.URL + "monitors/" + id);
+            if (response.IsSuccessStatusCode)
+            {
+                Snackbar.Add("Monitor deleted successfully!", Severity.Success);
+                Elements.RemoveAll(x => x.Id == id);
+                StateHasChanged();
+            }
+            else if (response.StatusCode == System.Net.HttpStatusCode.NotFound)
+            {
+                Snackbar.Add("Monitor not found!", Severity.Error);
+                navigate.NavigateTo("/monitors");
+            }
+            else
+            {
+                Snackbar.Add("Something went wrong!", Severity.Error);
+            }
+        }
     }
 }
