--- a/MVCLayer/wwwroot/css/main.css
+++ b/MVCLayer/wwwroot/css/main.css
@@ -1,252 +1,1 @@
-﻿main {
-    margin: 5rem 0;
-}
-
-.katalog {
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-    border-radius: 8px;
-}
-
-.katalog {
-    border-top: 8px solid #ff0096;
-}
-
-    .katalog h2,
-    .katalog a {
-        border: 1px solid #cccccc;
-        padding: 1.2rem 1.6rem;
-    }
-
-    .katalog a {
-        color: black;
-        text-decoration: none;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-        .katalog a:hover {
-            color: #ff0096;
-            box-shadow: rgba(0, 0, 0, 0.35) 0px -10px 6px -8px inset;
-        }
-
-.main-container-of-main {
-    display: flex;
-    justify-content: space-between;
-}
-
-.main-side {
-    width: 70%;
-    display: flex;
-    flex-direction: column;
-}
-
-.discount-side {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 2.2rem;
-}
-
-.title-of-discount {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 50%;
-}
-
-    .title-of-discount i {
-        font-size: 4rem;
-        color: #ff0096;
-    }
-
-    .title-of-discount a {
-        color: #000000;
-        text-decoration: none;
-    }
-
-        .title-of-discount a:hover {
-            color: #ff0096;
-        }
-
-.paged-discount {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 8%;
-}
-
-    .paged-discount a i {
-        font-size: 3rem;
-        color: #ff0096;
-        transition: 0.3s ease-in-out;
-    }
-
-        .paged-discount a i:hover {
-            color: #85004e;
-        }
-
-.diskount-items {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    grid-template-rows: auto;
-    gap: 1rem;
-}
-
-.discount-item {
-    text-decoration: none;
-    padding: 12px 18px;
-    border: 1px solid #cccccc;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    transition: 100ms ease-in;
-}
-
-    .discount-item img {
-        height: 200px;
-        width: 100%;
-        object-fit: cover;
-        margin-bottom: 20px;
-    }
-
-    .discount-item p {
-        font-size: 1.2rem;
-        color: #000000;
-    }
-
-    .discount-item span {
-        margin-bottom: 15px;
-    }
-
-        .discount-item span i {
-            color: #cccccc;
-        }
-
-    .discount-item s {
-        color: red;
-        font-size: 1.4rem;
-    }
-
-    .discount-item h2 {
-        font-size: 1.5rem;
-        margin-bottom: auto;
-    }
-
-    .discount-item:hover {
-        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    }
-
-.services {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.main-btn {
-    padding: 0.8rem 1rem;
-    border-radius: 8px;
-    border: none;
-    background-color: #ff0096;
-    color: #ffffff;
-    margin-top: 0.5rem;
-    transition: 0.3s ease;
-}
-
-    .main-btn:hover {
-        border: 2px solid #ff0096;
-        background: #ffffff;
-        color: #ff0096;
-    }
-
-.title-of-brend {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 5rem;
-    margin-bottom: 2rem;
-    padding-bottom: 3rem;
-    border-bottom: 0.2rem solid #cccccc;
-}
-
-.brend {
-    display: flex;
-    align-content: space-around;
-}
-
-.title-of-brend a {
-    text-decoration: none;
-    color: #000000;
-}
-
-    .title-of-brend a:hover {
-        color: #ff0096;
-    }
-
-.brends a img {
-    filter: grayscale(100%);
-    transition: all 0.3s;
-    transform: scale(1);
-}
-
-    .brends a img:hover {
-        filter: grayscale(0%);
-        transform: scale(1.1);
-    }
-/* New section start */
-.new-side {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 2.2rem;
-    margin-top: 4.3rem;
-}
-
-.title-of-new {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 50%;
-}
-
-    .title-of-new i {
-        font-size: 4rem;
-        color: #50c4ed;
-    }
-
-    .title-of-new a {
-        color: #000000;
-        text-decoration: none;
-    }
-/* New section end */
-/* Best section start */
-.best-side {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 2.2rem;
-    margin-top: 4.3rem;
-}
-
-.title-of-best {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 60%;
-}
-
-    .title-of-best i {
-        font-size: 4rem;
-        color: #50c4ed;
-    }
-
-    .title-of-best a {
-        color: #000000;
-        text-decoration: none;
-    }
-/* Best section end */
+﻿main{margin:5rem 0}.katalog{width:35%;display:flex;flex-direction:column;border-radius:8px;border-top:8px solid #ff0096}.katalog a,.katalog h2{border:1px solid #ccc;padding:1.2rem 1.6rem}.katalog a{color:#000;text-decoration:none;display:flex;justify-content:space-between;align-items:center}.katalog a:hover{color:#ff0096;box-shadow:rgba(0,0,0,.35) 0 -10px 6px -8px inset}.main-container-of-main{display:flex;justify-content:space-between}.main-side{width:70%;display:flex;flex-direction:column}.discount-side{width:100%;display:flex;justify-content:space-between;align-items:center;margin-bottom:2.2rem}.title-of-discount,.title-of-new{display:flex;align-items:center;justify-content:space-between;width:50%}.title-of-discount i{font-size:4rem;color:#ff0096}.title-of-best a,.title-of-discount a,.title-of-new a{color:#000;text-decoration:none}.title-of-brend a:hover,.title-of-discount a:hover{color:#ff0096}.paged-discount{display:flex;align-items:center;justify-content:space-between;width:8%}.paged-discount a i{font-size:3rem;color:#ff0096;transition:.3s ease-in-out}.paged-discount a i:hover{color:#85004e}.diskount-items{display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));grid-template-rows:auto;gap:1rem}.discount-item{text-decoration:none;padding:12px 18px;border:1px solid #ccc;height:auto;display:flex;flex-direction:column;transition:.1s ease-in}.services,.title-of-brend{justify-content:space-between;display:flex}.discount-item img{height:200px;width:100%;object-fit:cover;margin-bottom:20px}.discount-item p{font-size:1.2rem;color:#000}.discount-item span{margin-bottom:15px}.discount-item span i{color:#ccc}.discount-item s{color:red;font-size:1.4rem}.discount-item h2{font-size:1.5rem;margin-bottom:auto}.discount-item:hover{box-shadow:rgba(0,0,0,.35) 0 5px 15px}.services{align-items:center}.main-btn{padding:.8rem 1rem;border-radius:8px;border:none;background-color:#ff0096;color:#fff;margin-top:.5rem;transition:.3s}.main-btn:hover{border:2px solid #ff0096;background:#fff;color:#ff0096}.title-of-brend{align-items:center;margin-top:5rem;margin-bottom:2rem;padding-bottom:3rem;border-bottom:.2rem solid #ccc}.brend{display:flex;align-content:space-around}.title-of-brend a{text-decoration:none;color:#000}.brends a img{filter:grayscale(100%);transition:.3s;transform:scale(1)}.brends a img:hover{filter:grayscale(0%);transform:scale(1.1)}.best-side,.new-side{width:100%;display:flex;justify-content:space-between;align-items:center;margin-bottom:2.2rem;margin-top:4.3rem}.title-of-best i,.title-of-new i{font-size:4rem;color:#50c4ed}.title-of-best{display:flex;align-items:center;justify-content:space-between;width:60%}
