--- a/MVCLayer/Views/Home/Acsessories.cshtml
+++ b/MVCLayer/Views/Home/Acsessories.cshtml
@@ -1,7 +1,6 @@
-﻿<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Accessories</title>
-</head>
-</html>
+﻿@{
+    ViewData["Title"] = "Acsessories";
+}
+
+<h1>Acsessories</h1>
+
