--- a/MVCLayer/Views/Home/Colons.cshtml
+++ b/MVCLayer/Views/Home/Colons.cshtml
@@ -1,5 +1,7 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿
 @{
+    ViewData["Title"] = "Colons";
 }
+
+<h1>Colons</h1>
+
