--- a/MVCLayer/Views/Home/Kits.cshtml
+++ b/MVCLayer/Views/Home/Kits.cshtml
@@ -1,5 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Kits";
 }
+
+<h1>Kits</h1>
+
