--- a/MVCLayer/Views/Home/Laptops.cshtml
+++ b/MVCLayer/Views/Home/Laptops.cshtml
@@ -1,5 +1,350 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Laptops";
 }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>UPG | Laptop</title>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+          integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+          crossorigin="anonymous"
+          referrerpolicy="no-referrer" />
+    <link rel="shortcut icon"
+          href="images/site_tab_img.jpg"
+          type="image/jpeg" />
+@*     <link rel="stylesheet" href="~/css/root.css" /> *@
+    <link rel="stylesheet" href="~/css/shared.css" />
+    <link rel="stylesheet" href="~/css/laptop.css" />
+    <link rel="stylesheet" href="~/css/main.css">
+</head>
+<body>
+
+
+    <!-- Site Main header end -->
+    <main>
+        <div class="container main-container">
+            <div class="filtr">
+                <h2>Фильтр</h2>
+                <span>
+
+                    <div class="brends">
+                        <p class="filter-title">Бренды</p>
+                        <span class="checkbox">
+                            <input class="checkbox" type="checkbox" id="checkbox1" />
+                            <label for="checkbox1">Acer</label>
+                        </span>
+                        <span class="checkbox">
+                            <input class="checkbox" type="checkbox" id="checkbox2" />
+                            <label for="checkbox2">Asus</label>
+                        </span>
+                        <span class="checkbox">
+                            <input class="checkbox" type="checkbox" id="checkbox3" />
+                            <label for="checkbox3">Lenovo</label>
+                        </span>
+                        <span class="checkbox">
+                            <input class="checkbox" type="checkbox" id="checkbox4" />
+                            <label for="checkbox4">Rog</label>
+                        </span>
+                    </div>
+                    <div class="price">
+
+                        <input type="range"
+                               id="rangeInput"
+                               min="5000000"
+                               max="50000000"
+                               value="5 000 000" />
+                        <span class="price-in-number">
+                            <p>5 000 000</p>
+                            <p id="rangeLabel">50 000 000</p>
+                        </span>
+                    </div>
+                    <div class=" processer">
+
+                        <p>Процессор</p>
+                        <select>
+                            <option value="">Выберите из списка</option>
+                            <option value="AMD Ryzen 5 6600H">AMD Ryzen 5 6600H</option>
+                            <option value="AMD Ryzen 9 5900HX">AMD Ryzen 9 5900HX</option>
+                            <option value="Intel Core i7-11800H">
+                                Intel Core i7-11800H
+                            </option>
+                            <option value="Intel Core i7-12700H">
+                                Intel Core i7-12700H
+                            </option>
+                            <option value="Intel Core i9-12950HX">
+                                Intel Core i9-12950HX
+                            </option>
+                            <option value="Intel Core i9-13900H">
+                                Intel Core i9-13900H
+                            </option>
+                            <option value="Intel Core i9-13980HX">
+                                Intel Core i9-13980HX
+                            </option>
+                        </select>
+
+                    </div>
+                    <div class=" storage">
+
+                        <p>Хранилище</p>
+                        <select>
+                            <option value="">Выберите из списка</option>
+                            <option value="1TB M.2 NVMe PCIe 3.0">
+                                1TB M.2 NVMe PCIe 3.0
+                            </option>
+                            <option value="1TB M.2 NVMe PCIe 4.0">
+                                1TB M.2 NVMe PCIe 4.0
+                            </option>
+                            <option value="2TB M.2 NVMe PCIe 4.0">
+                                2TB M.2 NVMe PCIe 4.0
+                            </option>
+                            <option value="512GB NVMe SSD Gen3x4">
+                                512GB NVMe SSD Gen3x4
+                            </option>
+                        </select>
+
+                    </div>
+                    <div class=" ram">
+
+                        <p>Оперативная память</p>
+                        <select>
+                            <option value="Выберите из списка">Выберите из списка</option>
+                            <option value="DDR4 16GB 3200 (2x8)">
+                                DDR4 16GB 3200 (2x8)
+                            </option>
+
+
+                        </select>
+
+                    </div>
+                    <div class=" video-card">
+
+                        <p>Видеокарта</p>
+                        <select>
+                            <option value="">Выберите из списка</option>
+                            <option value="RTX 3050 GDDR6 4GB">RTX 3050 GDDR6 4GB</option>
+                        </select>
+
+                    </div>
+                    <div class=" screen">
+
+                        <p>Экран</p>
+                        <select>
+                            <option value="">Выберите из списка</option>
+                            <option value="15.6 FHD (1920x1080), 144hz IPS">15.6 FHD (1920x1080), 144hz IPS</option>
+                        </select>
+
+                    </div>
+                    <div class=" wifi">
+
+                        <p>Wi-Fi</p>
+                        <select>
+                            <option value="">Выберите из списка</option>
+                            <option value="Wi-Fi 6E(802.11ax)">Wi-Fi 6E(802.11ax)</option>
+                        </select>
+
+                    </div>
+                    <div class=" rtx-amd">
+
+                        <p>RTX/AMD</p>
+                        <select>
+                            <option value="">Выберите из списка</option>
+                            <option value="RTX">RTX</option>
+                        </select>
+
+                    </div>
+                    <div class="buttons-of-filter">
+                        <button class="reset">Сбросить фильтр</button>
+                        <button class="except">Применить фильтр</button>
+                    </div>
+
+                </span>
+            </div>
+            <div class="main-side">
+                <div class="main-side-intro">
+                    <p><a href="../index.html">Главная</a> / Ноутбуки</p>
+                    <span>
+                        <img width="70" src="../images/Category_images/Laptops.png" alt="">
+                        <h1>Ноутбуки</h1>
+                    </span>
+                    <div class="sort">
+                        <label for="">Сортировка</label>
+                        <select name="" id="">
+                            <option value="Поумолчанию">Поумолчанию</option>
+                            <option value="">Наименование (А -> Я)</option>
+                            <option value="">Наименование (Я -> А)</option>
+                            <option value="">Цена (по возрастанию)</option>
+                            <option value="">Цена (по убыванию)</option>
+                            <option value="">Рейтинг (по убыванию)</option>
+                            <option value="">Рейтинг (по возрастанию)</option>
+                        </select>
+
+                    </div>
+                </div>
+                <div class="laptops">
+                    <div class="diskount-items">
+
+                        <a class="discount-item" href="../item.html">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="../item.html">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="../item.html">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="#">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="#">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="#">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="#">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="#">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                        <a class="discount-item" href="#">
+                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
+                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
+                            <span>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </span>
+                            <s>29 641 000 сум</s>
+                            <h2>27 566 000 сум</h2>
+                            <div class="services">
+                                <button class="main-btn">КУПИТЬ</button>
+                                <i class="fa-solid fa-list"></i>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <script src="../app.js"></script>
+</body>
+</html>
