Added acsessories,AppleProducts,Laptops page

--- a/MVCLayer/Views/Home/Laptops.cshtml
+++ b/MVCLayer/Views/Home/Laptops.cshtml
@@ -237,7 +237,7 @@
                                 <i class="fa-solid fa-list"></i>
                             </div>
                         </a>
-                        <a class="discount-item" href="#">
+                        <a class="discount-item" href="../item.html">
                             <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
                             <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
                             <span>
@@ -254,7 +254,7 @@
                                 <i class="fa-solid fa-list"></i>
                             </div>
                         </a>
-                        <a class="discount-item" href="#">
+                        <a class="discount-item" href="../item.html">
                             <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
                             <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
                             <span>
@@ -271,80 +271,13 @@
                                 <i class="fa-solid fa-list"></i>
                             </div>
                         </a>
-                        <a class="discount-item" href="#">
-                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
-                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <s>29 641 000 сум</s>
-                            <h2>27 566 000 сум</h2>
-                            <div class="services">
-                                <button class="main-btn">КУПИТЬ</button>
-                                <i class="fa-solid fa-list"></i>
-                            </div>
-                        </a>
-                        <a class="discount-item" href="#">
-                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
-                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <s>29 641 000 сум</s>
-                            <h2>27 566 000 сум</h2>
-                            <div class="services">
-                                <button class="main-btn">КУПИТЬ</button>
-                                <i class="fa-solid fa-list"></i>
-                            </div>
-                        </a>
-                        <a class="discount-item" href="#">
-                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
-                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <s>29 641 000 сум</s>
-                            <h2>27 566 000 сум</h2>
-                            <div class="services">
-                                <button class="main-btn">КУПИТЬ</button>
-                                <i class="fa-solid fa-list"></i>
-                            </div>
-                        </a>
-                        <a class="discount-item" href="#">
-                            <img src="../images/Product_images/Laptop.jpg" alt="armchair" />
-                            <p>ASUS ZenBook Pro 16X OLED UX7602ZM-ME147W (90NB0WU1-M007H0)</p>
-                            <span>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </span>
-                            <s>29 641 000 сум</s>
-                            <h2>27 566 000 сум</h2>
-                            <div class="services">
-                                <button class="main-btn">КУПИТЬ</button>
-                                <i class="fa-solid fa-list"></i>
-                            </div>
-                        </a>
+
                     </div>
                 </div>
             </div>
         </div>
     </main>
 
-    <script src="../app.js"></script>
+    <script src="~/js/app.js"></script>
 </body>
 </html>
